# corewar_school21

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  champion.s
asm/: 43.s  Makefile  TODO  asm  cp.s
asm/champs/: 42.s  42_cp.s  43.s  asm  check.sh  check_errors.sh  cp.s  empty.cor  empty.s  mini.s  mise_a_jour_windows95.s
asm/cors/: 43.cor
asm/includes/: assembler.h  byte_tokenizer.h  byte_tokenizer_utils.h  commands.h  converter.h  converter_utils.h  file.h  label.h  op.h  token.h  token_determinator.h  tokenizer.h  valid.h
asm/my/: 42.cor  42_cp.cor  cp.cor  mini.cor
asm/srcs/: add_args.c  add_command.c  assembler.c  assembly.c  byte_tokenizer.c  converter.c  fill_jumps.c  finders.c  ft_check_args.c  ft_check_com.c  ft_check_dup_inst.c  ft_check_instrs.c  ft_check_instrs_three.c  ft_check_instrs_two.c  ft_check_labels.c  ft_check_name.c  ft_check_sizes.c  ft_fills.c  ft_marks.c  ft_strs.c  ft_validation.c  generate_bytecode.c  is_argument.c  is_instruction.c  is_separator.c  main.c  token_determinator.c  tokenizer.c  validation.c  write_to_file.c
assembler/: Makefile
assembler/includes/: byte_token.h  byte_tokenizer_utils.h  byteline.h  converter.h  file.h  token.h  tokenizer.h
assembler/srcs/: assembly.c  byte_tokenizer.c  converter.c  free_file.c  ft_check_com.c  ft_check_sizes.c  ft_marks.c  ft_validation.c  is_argument.c  is_label.c  is_separator.c  token_determinator.c  tokenizer.c  write_to_file.c
checker/: check.sh
reader/: Makefile  main.c  print.c  print_hex.c  reader.h
sh_filese/: check.sh
v_m/: 1.hex  1.txt  11  2.hex  2.txt  Corewar  Makefile  bin.sh  corewar
v_m/checker_from_stepan/: script_check.sh
v_m/dut_cor_files/: zork_bug.cor
v_m/includes/: carets.h  carriages.h  corewar.h  game.h  op.h  operations.h  pars.h  parsing.h  players.h  vis.h  vm.h
v_m/sh_filese/: bin.sh
v_m/srcs/: 11.txt  arena.c  carets_op.c  carets_op_delete.c  cycle_of_game.c  data_destroy.c  data_init.c  delete_from_list_of_carets.c  functions_for_op.c  game.c  game_checks.c  game_end.c  main.c  op_functions.c  op_reg_work.c  op_with_args.c  op_with_args2.c  op_with_args3.c  op_with_dif_args.c  operations_part2.c  out_introduce.c  output.c  pars.c  pars_argv.c  pars_champ.c  pars_dump.c  pars_valid_champ_name.c  parsing.c  players.c  validate_id.c  vm_init.c
virtual_mashine/includes/: op.h  pars.h  players.h  vm.h
(+75 files in other folders)
